Fixed environment variables

--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
 DOMAIN=www.example.com
+APPSERVER_HOST=appserver
+APPSERVER_PORT=8080
 PAYARA_PASSWORD=admin
 PAYARA_VERSION=5.191
 POSTGRES_VERSION=11.2-alpine
