--- a/nginx-le/appserver.conf
+++ b/nginx-le/appserver.conf
@@ -1,10 +1,10 @@
 server {
     listen        443 ssl;
-    server_name   __KEYCLOAK_DOMAIN__;
+    server_name   __DOMAIN__;
     server_tokens off;
 
-    ssl_certificate      /etc/letsencrypt/live/__KEYCLOAK_DOMAIN__/fullchain.pem;
-    ssl_certificate_key  /etc/letsencrypt/live/__KEYCLOAK_DOMAIN__/privkey.pem;
+    ssl_certificate      /etc/letsencrypt/live/__DOMAIN__/fullchain.pem;
+    ssl_certificate_key  /etc/letsencrypt/live/__DOMAIN__/privkey.pem;
 
     ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
     ssl_prefer_server_ciphers on;
@@ -24,6 +24,6 @@ server {
         proxy_buffers 8 64k;
         proxy_busy_buffers_size 64k;
 
-        proxy_pass http://__KEYCLOAK_HOST__:__KEYCLOAK_PORT__;
+        proxy_pass http://__APPSERVER_HOST__:__APPSERVER_PORT__;
     }
 }
